--- a/Exercise 2.ipynb
+++ b/Exercise 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "59af8abd",
+   "id": "c8491edf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "99837936",
+   "id": "477778e9",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f2a9aff5",
+   "id": "c4cd52e2",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e1d10ae",
+   "id": "de3078e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a9a390e1",
+   "id": "2dc3abe3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cf9a5b56",
+   "id": "5df484fc",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "64c813a2",
+   "id": "7de79eaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e0814354",
+   "id": "19b44ad8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e4f18411",
+   "id": "168f0f5b",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7d6c591d",
+   "id": "04dc0adc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "840658d4",
+   "id": "9dc601e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "94235947",
+   "id": "0771301a",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "822db45c",
+   "id": "ab0b1426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a9e0ac81",
+   "id": "44de3696",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a87ae593",
+   "id": "d2980b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "46f64470",
+   "id": "73cdd1c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "748a8ed8",
+   "id": "f70a328f",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8e412349",
+   "id": "2c66ba80",
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c89c1573",
+   "id": "4667664b",
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c547a7bf",
+   "id": "c569faa7",
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "61b8e910",
+   "id": "06b77800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "94346b9b",
+   "id": "fc51555d",
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "94e100bc",
+   "id": "32700931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1ba1c709",
+   "id": "e346860d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e96a7848",
+   "id": "f14b471d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11b637a8",
+   "id": "a94bd0ec",
    "metadata": {},
    "source": [
     "# Two types of plotting\n",
@@ -1712,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e9844fef",
+   "id": "07217231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8f1252a0",
+   "id": "ea31b2ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1736,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d0134e23",
+   "id": "c5981d55",
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c4ee91df",
+   "id": "4eb59b4e",
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1805,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0b00efac",
+   "id": "02dc4a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1817,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "587e742b",
+   "id": "036ce5c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1827,7 +1827,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c622c080",
+   "id": "436d6679",
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6310ebe3",
+   "id": "8641e6e6",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c00858eb",
+   "id": "5ca4da82",
    "metadata": {},
    "source": [
     "# Let's make a few modifications to improve the impact and aesthetics of the previous plot:\n",
@@ -1955,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "95d4f0b6",
+   "id": "e1d6765f",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d5db62e1",
+   "id": "878cd185",
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c9ee38",
+   "id": "2b59d9d2",
    "metadata": {},
    "source": [
     "# If we do no want the plots to overlap each other, we can stack them using the stacked paramemter. Let's also adjust the min and max x-axis labels to remove the extra gap on the edges of the plot. We can pass a tuple (min,max) using the xlim paramater, as show below."
@@ -2170,7 +2170,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7f11eb20",
+   "id": "bc63bd00",
    "metadata": {},
    "outputs": [
     {
@@ -2211,7 +2211,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8c7eaf69",
+   "id": "eab50181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2223,7 +2223,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f9d3b526",
+   "id": "a0d5feda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2233,7 +2233,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "cda4888b",
+   "id": "89ac27e0",
    "metadata": {},
    "outputs": [
     {
@@ -2282,7 +2282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdeb53aa",
+   "id": "96a024b2",
    "metadata": {},
    "source": [
     "# Bar Charts (Dataframe) \n",
@@ -2296,7 +2296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "123f93b7",
+   "id": "8a12c5e8",
    "metadata": {},
    "source": [
     "The bar plot above shows the total number of immigrants broken down by each year. We can clearly see the impact of the financial crisis; the number of immigrants to Canada started increasing rapidly after 2008. \n",
@@ -2319,7 +2319,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "acf28fcf",
+   "id": "84983902",
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a7f80a3",
+   "id": "5ab0360a",
    "metadata": {},
    "source": [
     "Let's also annotate a text to go over the arrow.  We will pass in the following additional parameters:\n",
@@ -2368,7 +2368,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c586683c",
+   "id": "58f85a40",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab5fca8",
+   "id": "08b5676b",
    "metadata": {},
    "source": [
     "**Horizontal Bar Plot**\n",
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "88ef1dc8",
+   "id": "f12bb2c0",
    "metadata": {},
    "outputs": [
     {
@@ -2711,7 +2711,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "8c248cff",
+   "id": "9abe3400",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2726,7 +2726,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "4c3ff1d0",
+   "id": "8564a4c0",
    "metadata": {},
    "outputs": [
     {
@@ -2753,7 +2753,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "7efe2b33",
+   "id": "6a617725",
    "metadata": {},
    "outputs": [
     {
@@ -2788,7 +2788,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "d06f969d",
+   "id": "718ad35b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2800,7 +2800,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "327071b2",
+   "id": "61900ab0",
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "0c684e0f",
+   "id": "c38f295d",
    "metadata": {},
    "outputs": [
     {
@@ -3096,13 +3096,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0a8cf6f",
+   "execution_count": 114,
+   "id": "cbade5c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Box Plots"
+    "#Box Plots\n",
+    "df_japan = df_canada.loc[['Japan'], years]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3569346f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
