sql_python_works

--- a/Final Assignment.ipynb
+++ b/Final Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "011b81a5",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "8b56834f",
    "metadata": {},
    "outputs": [
@@ -235,11 +235,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\encin\\anaconda3\\envs\\mopc\\lib\\site-packages\\jupyter_dash\\jupyter_app.py:139: UserWarning: The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "  func()\n",
-      "127.0.0.1 - - [25/May/2021 20:16:49] \"GET /_shutdown_7f52b3de-b083-43e2-9e4d-d29d7ffba6cb HTTP/1.1\" 200 -\n",
       " * Running on http://localhost:8050/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [25/May/2021 20:16:51] \"GET /_alive_7f52b3de-b083-43e2-9e4d-d29d7ffba6cb HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/May/2021 19:50:57] \"GET /_alive_7356bc04-44ff-4e19-9712-98d7f71d1d4a HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -256,7 +253,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2224b060ec8>"
+       "<IPython.lib.display.IFrame at 0x23e8c723bc8>"
       ]
      },
      "metadata": {},
@@ -266,10 +263,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [25/May/2021 20:16:51] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [25/May/2021 20:16:51] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [25/May/2021 20:16:51] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [25/May/2021 20:16:52] \"POST /_dash-update-component HTTP/1.1\" 500 -\n"
+      "127.0.0.1 - - [26/May/2021 19:50:57] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2021 19:50:58] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2021 19:50:58] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2021 19:50:58] \"POST /_dash-update-component HTTP/1.1\" 500 -\n"
      ]
     },
     {
@@ -278,7 +275,7 @@
      "text": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)\n",
-      "\u001b[1;32m<ipython-input-4-52468d8304e9>\u001b[0m in \u001b[0;36mget_graph\u001b[1;34m(\n",
+      "\u001b[1;32m<ipython-input-1-52468d8304e9>\u001b[0m in \u001b[0;36mget_graph\u001b[1;34m(\n",
       "    chart=None,\n",
       "    year=None,\n",
       "    children1=[],\n",
@@ -370,7 +367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [25/May/2021 20:21:53] \"POST /_dash-update-component HTTP/1.1\" 500 -\n"
+      "127.0.0.1 - - [26/May/2021 19:51:06] \"POST /_dash-update-component HTTP/1.1\" 500 -\n"
      ]
     },
     {
@@ -379,8 +376,8 @@
      "text": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)\n",
-      "\u001b[1;32m<ipython-input-4-52468d8304e9>\u001b[0m in \u001b[0;36mget_graph\u001b[1;34m(\n",
-      "    chart='OPT2',\n",
+      "\u001b[1;32m<ipython-input-1-52468d8304e9>\u001b[0m in \u001b[0;36mget_graph\u001b[1;34m(\n",
+      "    chart='OPT1',\n",
       "    year=None,\n",
       "    children1=[],\n",
       "    children2=[],\n",
@@ -471,7 +468,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [25/May/2021 20:21:56] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/May/2021 19:51:10] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
      ]
     }
    ],
